--- a/src/app/core/nav/nav.component.html
+++ b/src/app/core/nav/nav.component.html
@@ -1,3 +1,3 @@
-<nav class="nav">
-    <app-nav-menu [menuItems]="menuItems"></app-nav-menu> 
-</nav>
+<md-toolbar>
+    <app-nav-menu [menuItems]="menuItems"></app-nav-menu>
+</md-toolbar>
