All changes for branch for the gardening app

--- a/src/my-theme.scss
+++ b/src/my-theme.scss
@@ -7,8 +7,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$app-primary: mat-palette($mat-blue,700);
-$app-accent:  mat-palette($mat-indigo);
+$app-primary: mat-palette($mat-green, 300);
+$app-accent:  mat-palette($mat-brown, 800);
 
 // The warn palette is optional (defaults to red).
 $app-warn:    mat-palette($mat-red);
