--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,3 @@
+@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
 /* You can add global styles to this file, and also import other style files */
 
