Add plants module to basically work Neeed to create a directive for automatically looking up the flower from the usda plants mongo db

--- a/src/app/add-plants/add-plants.component.html
+++ b/src/app/add-plants/add-plants.component.html
@@ -2,30 +2,23 @@
   <md-list formArrayName="plants">
     <md-card *ngFor="let plant of form.controls['plants'].controls; let i=index">
       <div [formGroupName]="i">
-	<md-input  placeholder="Enter a Plant" type="text"
-		   id="plantName" formControlName="plantName" ></md-input>
-	<button md-icon-button color="primary"
-		class="addPlantButton"  (click)="addPlant()">
-	  <md-icon>add</md-icon>
-	</button>
+        <md-input-container>
+            <input mdInput  placeholder="Enter a Plant" type="text"
+                id="name" formControlName="name">
+        </md-input-container>
+        <button md-icon-button color="primary"
+            (click)="addPlant()">
+            <md-icon class="md-24">add</md-icon>
+        </button>
+        <button md-icon-button color="primary"
+            (click)="removePlant()">
+            <md-icon class="md-24">close</md-icon>
+        </button>
       </div>
     </md-card>
   </md-list>
-  <button md-raised-button [disabled]="!form.valid"  color="accent"
-	  (click)="deploy()">Deploy</button>
+  <button md-raised-button [disabled]="!form.valid"  
+    color="accent">Add</button>
   <button md-raised-button  color="accent"
-	  (click)="cancel()">Cancel</button>
+    (click)="cancel()">Cancel</button>
 </form>
-
-<p>Value: {{ form.value | json }}</p>
-<p>Validation status: {{ form.status }}</p>
-<p>Validation status: {{ form.valid }}</p>
-
-
-
-
-
-
-
-
-                                                    
