--- a/src/my-theme.scss
+++ b/src/my-theme.scss
@@ -7,7 +7,7 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$app-primary: mat-palette($mat-green, 300);
+$app-primary: mat-palette($mat-brown, 600);
 $app-accent:  mat-palette($mat-brown, 800);
 
 // The warn palette is optional (defaults to red).
