Adding mock server for loading the user and a set of mock plants for now to have a base for design  - Updated home component to act as base dashboard for plants ( will have to be renamed later)  - default route now routes to home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
-<p>
-  home works!
-</p>
+<md-card>
+  <md-card-title>Welcome to your garden</md-card-title>
+  <md-card-subtitle>Username goes here</md-card-subtitle>
+</md-card>
+<app-add-plants></app-add-plants>
